--- a/项目部署指南.md
+++ b/项目部署指南.md
@@ -1,209 +1,133 @@
-# 医学PDF提取系统 - 部署指南
+# 医学PDF提取系统部署指南
 
-## 1. 环境要求
+## 环境要求
 
-### 硬件要求
+### 硬件
 - GPU: NVIDIA V100 16GB 或更高
 - 内存: 32GB+
 - 存储: 50GB+ (模型缓存)
 
-### 软件要求
+### 软件
 - Ubuntu 20.04+
 - Python 3.8+
 - CUDA 11.8+
-- cuDNN 8.6+
 
-## 2. 安装步骤
+## 安装步骤
 
-### 2.1 安装Python依赖
+### 1. 安装依赖
 ```bash
 pip install vllm==0.13.0
 pip install pymupdf
 pip install requests
 ```
 
-### 2.2 下载模型
+### 2. 下载模型
 ```bash
-# Qwen3-8B模型会在首次启动时自动下载
-# 或手动下载到指定目录
 huggingface-cli download Qwen/Qwen3-8B --local-dir /root/autodl-tmp/hf_cache/hub/models--Qwen--Qwen3-8B
 ```
 
-### 2.3 配置文件结构
-```
-/root/pdf_summarization_deploy_20251225_093847/
-├── production_extractor_v7.py   # 主程序
-├── fewshot_samples/             # Few-shot示例 (必需)
-│   ├── GUIDELINE_sample.json
-│   ├── REVIEW_sample.json
-│   └── OTHER_sample.json
-└── vllm_server_v13.sh           # vLLM启动脚本
-```
-
-## 3. 启动服务
-
-### 3.1 启动vLLM模型服务
+### 3. 启动vLLM服务
 ```bash
-cd /root/autodl-tmp
-bash vllm_server_v13.sh
-```
-
-vLLM启动参数说明:
-```bash
-vllm serve Qwen/Qwen3-8B \
-    --served-model-name qwen3-8b \
-    --dtype float16 \
-    --max-model-len 16384 \
-    --gpu-memory-utilization 0.9 \
-    --port 8000
-```
-
-### 3.2 验证服务状态
-```bash
-# 等待约2分钟后测试
-curl http://localhost:8000/v1/models
-```
-
-预期输出:
-```json
-{"data": [{"id": "qwen3-8b", ...}]}
-```
-
-## 4. 使用方法
-
-### 4.1 Python调用
-```python
-from production_extractor_v7 import extract_pdf
-
-# 单文件提取
-result = extract_pdf("/path/to/medical.pdf")
-
-if result["success"]:
-    print(f"类型: {result['doc_type']}")
-    print(f"结果: {result['result']}")
-else:
-    print(f"错误: {result['error']}")
-```
-
-### 4.2 批量处理
-```python
-from production_extractor_v7 import MedicalPDFExtractor
-from pathlib import Path
-
-extractor = MedicalPDFExtractor()
-pdf_dir = Path("/path/to/pdfs")
-
-for pdf in pdf_dir.glob("*.pdf"):
-    result = extractor.extract(str(pdf))
-    # 处理结果...
-```
-
-### 4.3 作为API服务
-```python
-# api_server.py
-from flask import Flask, request, jsonify
-from production_extractor_v7 import extract_pdf
-
-app = Flask(__name__)
-
-@app.route('/extract', methods=['POST'])
-def extract():
-    pdf_path = request.json.get('pdf_path')
-    result = extract_pdf(pdf_path)
-    return jsonify(result)
-
-if __name__ == '__main__':
-    app.run(host='0.0.0.0', port=5000)
-```
-
-## 5. 配置说明
-
-### 5.1 提取器配置
-```python
-# production_extractor_v7.py 中可配置项
-LOCAL_API = "http://localhost:8000/v1/chat/completions"  # vLLM地址
-max_pages = 15       # 最大处理页数
-max_tokens = 6000    # LLM输出token限制
-temperature = 0.2    # 生成温度
-timeout = 300        # API超时秒数
-```
-
-### 5.2 关键参数
-**必须设置**: 调用Qwen3-8B时需要禁用thinking模式
-```python
-"chat_template_kwargs": {"enable_thinking": False}
-```
-
-## 6. 性能优化
-
-### 6.1 并发处理
-```python
-from concurrent.futures import ThreadPoolExecutor
-
-def batch_extract(pdf_list, max_workers=2):
-    with ThreadPoolExecutor(max_workers=max_workers) as executor:
-        results = list(executor.map(extract_pdf, pdf_list))
-    return results
-```
-
-推荐并发数:
-- 用户上传: 2
-- 批量处理: 5
-
-### 6.2 内存优化
-- GPU显存利用率: 0.9 (vLLM默认)
-- 长文档截断: 前15页
-
-## 7. 监控与日志
-
-### 7.1 服务监控
-```bash
-# 检查vLLM进程
-ps aux | grep vllm
-
-# 检查GPU使用
-nvidia-smi
-
-# 检查API响应
-curl http://localhost:8000/health
-```
-
-### 7.2 日志位置
-- vLLM日志: 启动终端输出
-- 提取日志: 可在代码中添加logging
-
-## 8. 故障排除
-
-### 8.1 常见问题
-
-**Q: API返回 "max_tokens is too large"**
-A: 减少输入文本长度或降低max_tokens值
-
-**Q: JSON解析失败**
-A: v7.2已修复大部分问题，若仍出现，检查PDF是否损坏
-
-**Q: 提取结果不完整**
-A: 长文档会被截断，这是已知限制
-
-### 8.2 重启服务
-```bash
-# 停止vLLM
-pkill -f vllm
-
-# 重新启动
 bash /root/autodl-tmp/vllm_server_v13.sh
 ```
 
-## 9. 更新与维护
+### 4. 验证服务
+```bash
+curl http://localhost:8000/v1/models
+# 应返回 {"data": [{"id": "qwen3-8b", ...}]}
+```
 
-### 9.1 更新Few-shot样本
-如需更新示例，修改 `fewshot_samples/` 下的JSON文件
+## 使用方法
 
-### 9.2 版本回滚
-保留历史版本在 `extractors_versioned/` 目录
+### Python调用
+```python
+from production_extractor_v7 import extract_pdf
 
-## 10. 联系与支持
+result = extract_pdf("/path/to/medical.pdf")
+print(f"成功: {result['success']}")
+print(f"类型: {result['doc_type']}")
+print(f"文档大小: {result['stats']['doc_size']}")
+```
 
-- 版本日志: `VERSION_LOG.md`
-- 项目记忆: `memory.md`
-- 测试结果: `v7_100pdf_test_results.json`
+### 命令行
+```bash
+python production_extractor_v7.py /path/to/medical.pdf
+```
+
+## v7.6 混合策略说明
+
+系统根据PDF页数自动选择最优提取策略：
+
+| 文档大小 | 页数 | 策略 |
+|---------|------|------|
+| 短文档 | ≤15页 | 全部保留，只跳过空白页 |
+| 中等文档 | 16-50页 | 跳过目录/参考文献/空白页 |
+| 长文档 | >50页 | 智能选择最多50页关键内容 |
+
+### 长文档智能选择规则
+1. 保留前5页（元数据、摘要）
+2. 保留最后3页（结论）
+3. 优先高价值章节：摘要>结论>推荐>方法>引言
+4. 按内容量填充剩余配额
+
+## 配置参数
+
+### vLLM服务配置
+- 端口: 8000
+- 模型: Qwen3-8B fp16
+- 上下文长度: 16384
+- GPU利用率: 0.92
+
+### 提取器配置
+| 参数 | 值 | 说明 |
+|------|------|------|
+| SHORT_DOC_THRESHOLD | 15 | 短文档阈值 |
+| MEDIUM_DOC_THRESHOLD | 50 | 中等文档阈值 |
+| max_long_doc_pages | 50 | 长文档最大选择页数 |
+| min_content_chars | 100 | 空白页判断阈值 |
+
+## 性能基准
+
+| 指标 | v7.2 | v7.3 | v7.6 |
+|------|------|------|------|
+| 成功率 | 97% | 100% | 100% |
+| GPT评分 | 9.60 | 9.09 | 待测 |
+| 平均耗时 | 58s | 42s | ~45s |
+| 长文档支持 | ❌ | ✅ | ✅ |
+
+## 故障排查
+
+### vLLM服务无响应
+```bash
+# 检查进程
+ps aux | grep vllm
+# 检查GPU
+nvidia-smi
+# 重启服务
+pkill -f vllm
+bash /root/autodl-tmp/vllm_server_v13.sh
+```
+
+### 提取失败
+1. 检查PDF是否可读: `python -c "import fitz; fitz.open('xxx.pdf')"`
+2. 检查vLLM服务: `curl http://localhost:8000/v1/models`
+3. 查看错误信息: `result['error']`
+
+## 文件结构
+
+```
+/root/pdf_summarization_deploy_20251225_093847/
+├── production_extractor_v7.py    # 主提取器(v7.6)
+├── fewshot_samples/              # Few-shot示例
+│   ├── GUIDELINE_sample.json
+│   ├── REVIEW_sample.json
+│   └── OTHER_sample.json
+├── memory.md                     # 项目记忆文档
+├── README.md                     # 项目说明
+└── 项目部署指南.md               # 本文档
+
+/root/autodl-tmp/
+├── vllm_server_v13.sh           # vLLM启动脚本
+├── docs/                        # 文档备份
+└── pdf_input/                   # 测试PDF
+```
